syntax = "proto3"; 
option java_multiple_files = true; 
package com.ds.coursework2.grpc.services; 

message ItemObject {
    int32 itemId = 1;
    string itemName = 2;
    double price = 3;
    int32 quantity = 4;
}

message AddItemRequest {
    string itemName = 1;
    double price = 2;
    int32 quantity = 3;
}

message GetItemRequest {
    int32 itemId = 1;
}

message UpdateItemRequest {
    int32 itemId = 1;
    double newPrice = 2;
}

message DeleteItemRequest {
    int32 itemId = 1;
}

message AddItemResponse {
    int32 itemId = 1;
}

message GetItemResponse {
    int32 itemId = 1;
    string itemName = 2;
    double price = 3;
    int32 quantity = 4;
}

message UpdateItemResponse {
    int32 itemId = 1;
}

message DeleteItemResponse {
    int32 itemId = 1;
}

message ViewItemCatalogueRequest {
}

message ViewItemCatalogueResponse {
    repeated ItemObject itemCatalogue = 1;
}

service ItemService {
    rpc addItem(AddItemRequest) returns (AddItemResponse);
    rpc getItem(GetItemRequest) returns (GetItemResponse);
    rpc updateItem(UpdateItemRequest) returns (UpdateItemResponse);
    rpc deleteItem(DeleteItemRequest) returns (DeleteItemResponse);
    rpc getItemCatalogue(ViewItemCatalogueRequest) returns (ViewItemCatalogueResponse);
}